--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-<string name="app_name">covid19 India</string>
-<string name="title_home">Home</string>
-<string name="title_dashboard">News</string>
-<string name="title_notifications">Helpline</string>
-<string name="title_statewise">StateWise Stats</string>
-<string name="prediction"><u>Cases Expected</u></string>
-<string name="the_helpline_number_for_corona_virus_91_11_23978046_toll_free_no_1075">The Helpline Number for corona–virus : +91–11–23978046 Toll Free No: 1075</string>
+    <string name="app_name">covid19 India</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">News</string>
+    <string name="title_notifications">Helpline</string>
+    <string name="title_guides">Guides</string>
+    <string name="title_statewise">State Stats</string>
+    <string name="prediction"><u>Cases Expected</u></string>
+    <string name="the_helpline_number_for_corona_virus_91_11_23978046_toll_free_no_1075">The Helpline Number for corona–virus : +91–11–23978046 Toll Free No: 1075</string>
 </resources>
