--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
 <string name="about">About</string>
 <string name="pawan0411"><u>Pawan0411</u></string>
 <string name="speedx"><u>SpeedX</u></string>
-<string name="update"><u>Update Available : </u></string>
+<string name="update"><u>Update Available :http://tiny.cc/covid-19india</u></string>
 <string name="this_app_is_about_updates_related_to_coronavirus_in_india">This app is about updates related to coronavirus in India.</string>
 </resources>
